--- a/about.html
+++ b/about.html
@@ -114,7 +114,7 @@
 												the testing process to better assist customers and provide excellent service.
 											</p>
 
-											<h3>Self study and Research</h3>
+											<h3 id="about_self_study">Self study and Research</h3>
 											<p style="text-align: justify;">
 												I was taught that when trying to provide a service one does not only need to learn the job but also study the field one is going in.
 												I've taken the time to research how the componets of a backflow device work, the proper testing equipment, and most importantly what are 
@@ -146,9 +146,9 @@
 							<!-- <h3>Links to Stuff</h3> -->
 							<ul class="links">
 								<li><a href="index.html">Home</a></li>
-								<li><a href="#">About Me</a></li>
-								<li><a href="#">Contact</a></li>
-								<li><a href="#">Schedule an Appointment</a></li>
+								<li><a href="about.html">About Me</a></li>
+								<li><a href="contact.html">Contact</a></li>
+								<li><a href="appointment.html">Schedule an Appointment</a></li>
 								<li><a href="resources.html">FAQ</a></li>
 							</ul>
 						</section>
