--- a/contact.html
+++ b/contact.html
@@ -70,7 +70,7 @@
 									<span class="image featured"><img src="images/get-in-touch.png" alt="Contact Carlos Beltran Backflow" style="width: auto; margin-left: auto; margin-right: auto;"/></span>
 
 									<ul>
-										<li><strong>Phone: <a href="tel:516)324-4687"> (516) 324 - 4687</a></strong></li>
+										<li><strong>Call/Text: <a href="tel:516)324-4687"> (516) 324 - 4687</a></strong></li>
 										<li><strong>Email: <a href="mailto:backflowfriends@gmail.com">backflowfriends@gmail.com</a></strong></li>
 									</ul>
 								</article>
@@ -111,28 +111,21 @@
 				<div id="footer">
 					<div class="container">
 						<div class="row">
-							<section class="col-6 col-6-narrower col-12-mobilep">
-								<h3>Links to Stuff</h3>
+							<section class="col-3 col-6-narrower col-12-mobilep">
+								<!-- <h3>Links to Stuff</h3> -->
 								<ul class="links">
-									<li><a href="#">Mattis et quis rutrum</a></li>
-									<li><a href="#">Suspendisse amet varius</a></li>
-									<li><a href="#">Sed et dapibus quis</a></li>
-									<li><a href="#">Rutrum accumsan dolor</a></li>
-									<li><a href="#">Mattis rutrum accumsan</a></li>
-									<li><a href="#">Suspendisse varius nibh</a></li>
-									<li><a href="#">Sed et dapibus mattis</a></li>
+									<li><a href="index.html">Home</a></li>
+									<li><a href="about.html">About Me</a></li>
+									<li><a href="contact.html">Contact</a></li>
+									<li><a href="appointment.html">Schedule an Appointment</a></li>
+									<li><a href="resources.html">FAQ</a></li>
 								</ul>
 							</section>
-							<section class="col-6 col-6-narrower col-12-mobilep">
-								<h3>More Links to Stuff</h3>
+							<section class="col-3 col-6-narrower col-12-mobilep">
+								<!-- <h3>More Links to Stuff</h3> -->
 								<ul class="links">
-									<li><a href="#">Duis neque nisi dapibus</a></li>
-									<li><a href="#">Sed et dapibus quis</a></li>
-									<li><a href="#">Rutrum accumsan sed</a></li>
-									<li><a href="#">Mattis et sed accumsan</a></li>
-									<li><a href="#">Duis neque nisi sed</a></li>
-									<li><a href="#">Sed et dapibus quis</a></li>
-									<li><a href="#">Rutrum amet varius</a></li>
+									<li><i class="fas fa-envelope-square"></i><span style="font-size: medium; padding-left: 10px;"><a href="mailto:backflowfriends@gmail.com">backflowfriends@gmail.com</a></span></li>
+									<li><i class="fas fa-phone-alt"></i><span style="font-size: medium; padding-left: 10px;"><a href="tel:516)324-4687"> (516) 324 - 4687</a></span></li>
 								</ul>
 							</section>
 						</div>
