--- a/resources.html
+++ b/resources.html
@@ -250,7 +250,7 @@
 												<li><a href="https://www.health.ny.gov/forms/doh-1013.pdf" target="_blank">DOH 1013 Form</a></li>
 											</ul>
 											<footer>
-												<a href="#" class="button"><span style="font-size: small;">Schedule An Appointment</span></a>
+												<a href="appointment.html" class="button"><span style="font-size: small;">Schedule An Appointment</span></a>
 											</footer>
 										</section>
 
@@ -277,10 +277,10 @@
 						<section class="col-3 col-6-narrower col-12-mobilep">
 							<!-- <h3>Links to Stuff</h3> -->
 							<ul class="links">
-								<li><a href="#">Home</a></li>
+								<li><a href="index.html">Home</a></li>
 								<li><a href="about.html">About Me</a></li>
-								<li><a href="#">Contact</a></li>
-								<li><a href="#">Schedule an Appointment</a></li>
+								<li><a href="contact.html">Contact</a></li>
+								<li><a href="appointment.html">Schedule an Appointment</a></li>
 								<li><a href="resources.html">FAQ</a></li>
 							</ul>
 						</section>
