--- a/services.html
+++ b/services.html
@@ -80,7 +80,7 @@
 												requires that every backflow device be tested by a certified backflow tester once a year.</i>
 											</p>
 
-											<h3>Residential Backflow Testing</h3>
+											<h3 id="residential_service">Residential Backflow Testing</h3>
 											<p style="margin-bottom: 0px;">
 												Residential customers are required to have a backflow preventer if you have:
 											</p>
@@ -96,7 +96,7 @@
 												I will be more than happy to help.
 											</p>
 
-											<h3>Commercial Backflow Testing</h3>
+											<h3 id="commercial_service">Commercial Backflow Testing</h3>
 											<p style="margin-bottom: 0px;">
 												Types of businesses that are required to install and perform yearly backflow tests include:
 											</p>
@@ -113,11 +113,11 @@
 												<li>Churches with baptismal pools</li>
 											</ul>
 											<p></p>
-											<h3>Water Bacteria Test</h3>
+											<h3 id="bacteria_service">Water Bacteria Test</h3>
 											<p style="margin-bottom: 10px;">
 												We are well aware that bacteria can come in many different forms. Your potable water could be a contaminated with bacteria and you wouldnt even know it.
-												That is why I offer <strong>Coliform bacteria testing</strong> to ensure that your drinking water is safe from bacteria such as E.coli. Schedule your appointment
-												to get your find out if your drinking water is safe.
+												That is why I offer <strong>Coliform bacteria testing</strong> to ensure that your drinking water is safe from bacteria such as E.coli. <a href="appointment.html">Schedule your appointment</a>
+												to find out if your drinking water is safe.
 											</p>
 											<p>Additionally, NYS offers free led testing by their <i>Free Led Testing Pilot Program</i>. To read more on how you can obtain your free led testing kit please click here.</p>
 										</article>
@@ -171,8 +171,8 @@
 							<ul class="links">
 								<li><a href="index.html">Home</a></li>
 								<li><a href="about.html">About Me</a></li>
-								<li><a href="#">Contact</a></li>
-								<li><a href="#">Schedule an Appointment</a></li>
+								<li><a href="contact.html">Contact</a></li>
+								<li><a href="appointment.html">Schedule an Appointment</a></li>
 								<li><a href="resources.html">FAQ</a></li>
 							</ul>
 						</section>
