--- a/appointment.html
+++ b/appointment.html
@@ -10,6 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<script src="https://kit.fontawesome.com/815e9e56d3.js" crossorigin="anonymous"></script>
 	</head>
 	<body class="is-preload">
 		<div id="page-wrapper">
@@ -56,84 +57,98 @@
 			<!-- Main -->
 				<section class="wrapper style1">
 					<div class="container">
-						<div id="content">
-
-							<!-- Content -->
+							<div class="row gtr-200">
+								<div class="col-4 col-12-narrower" id="left-side-form">
+									<div id="sidebar">
+										<section>
+											<h3>Service Locations</h3>
+											<ul>
+												<li style="list-style: none; font-weight: bold;">Nassau County</li>
+												<li>Town of Hempstead</li>
+												<li>Village of Hempstead</li>
+											</ul>
+										</section>
+									</div>
+								</div>
+								<div class="col-8  col-12-narrower imp-narrower">
+									<div id="content">
+										<!-- Content -->
 							<iframe src="https://docs.google.com/forms/d/e/1FAIpQLScXQ5LzYydj3ujc8DNrO15bWWXbqMwx41LnCSuL7825_cQOjg/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0" onload='javascript:(function(o){o.style.height=o.contentWindow.document.body.scrollHeight+"px";}(this));' style="height:950px;width:100%;border:none;overflow:hidden;">Loading…</iframe>
-
-						</div>
+									</div>
+								</div>
+							</div>
 					</div>
 				</section>
 
 			<!-- Footer -->
-				<div id="footer">
-					<div class="container">
-						<div class="row">
-							<section class="col-3 col-6-narrower col-12-mobilep">
-								<h3>Links to Stuff</h3>
-								<ul class="links">
-									<li><a href="#">Mattis et quis rutrum</a></li>
-									<li><a href="#">Suspendisse amet varius</a></li>
-									<li><a href="#">Sed et dapibus quis</a></li>
-									<li><a href="#">Rutrum accumsan dolor</a></li>
-									<li><a href="#">Mattis rutrum accumsan</a></li>
-									<li><a href="#">Suspendisse varius nibh</a></li>
-									<li><a href="#">Sed et dapibus mattis</a></li>
-								</ul>
-							</section>
-							<section class="col-3 col-6-narrower col-12-mobilep">
-								<h3>More Links to Stuff</h3>
-								<ul class="links">
-									<li><a href="#">Duis neque nisi dapibus</a></li>
-									<li><a href="#">Sed et dapibus quis</a></li>
-									<li><a href="#">Rutrum accumsan sed</a></li>
-									<li><a href="#">Mattis et sed accumsan</a></li>
-									<li><a href="#">Duis neque nisi sed</a></li>
-									<li><a href="#">Sed et dapibus quis</a></li>
-									<li><a href="#">Rutrum amet varius</a></li>
-								</ul>
-							</section>
-							<section class="col-6 col-12-narrower">
-								<h3>Get In Touch</h3>
-								<form>
-									<div class="row gtr-50">
-										<div class="col-6 col-12-mobilep">
-											<input type="text" name="name" id="name" placeholder="Name" />
-										</div>
-										<div class="col-6 col-12-mobilep">
-											<input type="email" name="email" id="email" placeholder="Email" />
-										</div>
-										<div class="col-12">
-											<textarea name="message" id="message" placeholder="Message" rows="5"></textarea>
-										</div>
-										<div class="col-12">
-											<ul class="actions">
-												<li><input type="submit" class="button alt" value="Send Message" /></li>
-											</ul>
-										</div>
+			<div id="footer">
+				<div class="container">
+					<div class="row">
+						<section class="col-3 col-6-narrower col-12-mobilep">
+							<!-- <h3>Links to Stuff</h3> -->
+							<ul class="links">
+								<li><a href="index.html">Home</a></li>
+								<li><a href="about.html">About Me</a></li>
+								<li><a href="contact.html">Contact</a></li>
+								<li><a href="appointment.html">Schedule an Appointment</a></li>
+								<li><a href="resources.html">FAQ</a></li>
+							</ul>
+						</section>
+						<section class="col-3 col-6-narrower col-12-mobilep">
+							<!-- <h3>More Links to Stuff</h3> -->
+							<ul class="links">
+								<li><i class="fas fa-envelope-square"></i><span style="font-size: medium; padding-left: 10px;"><a href="mailto:backflowfriends@gmail.com">backflowfriends@gmail.com</a></span></li>
+								<li><i class="fas fa-phone-alt"></i><span style="font-size: medium; padding-left: 10px;"><a href="tel:516)324-4687"> (516) 324 - 4687</a></span></li>
+							</ul>
+						</section>
+						<section class="col-6 col-12-narrower">
+							<h3>Get In Touch</h3>
+							<p >
+								Devoted to service my community and ensure your water is safe to drink.
+								Offering reliable and affordable backflow testing prices!</p>
+							<form>
+								<div class="row gtr-50">
+									<div class="col-6 col-12-mobilep">
+										<input type="text" name="name" id="name" placeholder="Name*" required/>
 									</div>
-								</form>
-							</section>
-						</div>
+									<div class="col-6 col-12-mobilep">
+										<input type="email" name="email" id="email" placeholder="Email*" required/>
+									</div>
+									<!-- <div class="col-6 col-12-mobilep">
+										<p style="margin: auto;">Appointment Date</p>
+										<input type="date" name="calendar" id="calendar" placeholder="Date" />
+									</div> -->
+									<div class="col-12">
+										<textarea name="message" id="message" placeholder="Message" rows="5"></textarea>
+									</div>
+									<div class="col-12">
+										<ul class="actions">
+											<li><input type="submit" class="button alt" value="Send Message" /></li>
+										</ul>
+									</div>
+								</div>
+							</form>
+						</section>
+					</div>
+				</div>
+
+				<!-- Icons -->
+					<ul class="icons">
+						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+						<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+						<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+						<li><a href="#" class="icon brands fa-google-plus-g"><span class="label">Google+</span></a></li>
+					</ul>
+
+				<!-- Copyright -->
+					<div class="copyright">
+						<ul class="menu">
+							<li>&copy; Untitled. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						</ul>
 					</div>
 
-					<!-- Icons -->
-						<ul class="icons">
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-							<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-							<li><a href="#" class="icon brands fa-google-plus-g"><span class="label">Google+</span></a></li>
-						</ul>
-
-					<!-- Copyright -->
-						<div class="copyright">
-							<ul class="menu">
-								<li>&copy; Untitled. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-							</ul>
-						</div>
-
-				</div>
+			</div>
 
 		</div>
 
