--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 							<span style="color: #FFFFFF"> Call Today: </span><a href="tel:516)324-4687"> (516) 324 - 4687</a>
 							<!-- <span style="margin-left: 10px;"><em>OR</em></span> -->
 						</h2>
-						<a href="#" class="button">Schedule Appointment</a>
+						<a href="appointment.html" class="button">Schedule Appointment</a>
 						<h2 style="color: #E3482E; margin-left: 15px;"><a href="tel:516)324-4687">Se Habla Espanol!</a></h2>
 					</header>
 				</section>
@@ -130,9 +130,9 @@
 						<div class="row">
 							<section class="col-6 col-12-narrower">
 								<div class="box post">
-									<a href="#" class="image left"><img src="images/drinking_water.jpg" alt="" /></a>
+									<a href="resources.html" class="image left"><img src="images/backflow_testing.JPG" alt="" /></a>
 									<div class="inner">
-										<h3>Backflow Device Testing</h3>
+										<h3><a href="resources.html">Backflow Device Testing</a></h3>
 										<p style="text-align: justify;">
 											Our area, Nassau County in Long Island, NY, demands testing on a yearly basis to ensure water is safe to consume.
 											As a certified NYS backflow tester, I will ensure that your device is tested properly and submit all paperwork 
@@ -143,9 +143,9 @@
 							</section>
 							<section class="col-6 col-12-narrower">
 								<div class="box post">
-									<a href="#" class="image left"><img src="images/water_bacteria.png" alt="" /></a>
+									<a href="services.html#bacteria_service" class="image left"><img src="images/water_bacteria.png" alt="" /></a>
 									<div class="inner">
-										<h3>Water Bacteria Test</h3>
+										<h3><a href="services.html#bacteria_service">Water Bacteria Test</a></h3>
 										<p style="text-align: justify;">
 											How clean and safe is your drinking water?
 											Although, public water is tested to ensure there is no coliform present, this does not guarantee that throught 
@@ -190,7 +190,7 @@
 					<div class="container">
 						<header class="major">
 							<h2><a href="#">New Customers Save <strong>10%</strong> When Scheduling your Appointment</a></h2>
-							<p>Have any questions? Visit my <a href="#">FAQ</a> page</p>
+							<p>Have any questions? Visit my <a href="resources.html">FAQ</a> page</p>
 						</header>
 					</div>
 				</section>
@@ -201,9 +201,9 @@
 						<div class="row">
 							<section class="col-6 col-12-narrower">
 								<div class="box post">
-									<a href="#" class="image left"><img src="images/drinking_water.jpg" alt="" /></a>
+									<a href="services.html#residential_service" class="image left"><img src="images/drinking_water.jpg" alt="" /></a>
 									<div class="inner">
-										<h3>Residential Testing</h3>
+										<h3><a href="services.html#residential_service">Residential Testing</a></h3>
 										<p style="text-align: justify;">
 											It's very important that house owners take <strong>serious responsibility</strong> in ensuring that their potable water is safe to use.
 											Performing a backflow test on a yearly basis will bring peace of mind knowing that the water beign consumed is safe 
@@ -214,9 +214,9 @@
 							</section>
 							<section class="col-6 col-12-narrower">
 								<div class="box post">
-									<a href="#" class="image left"><img src="images/testing.jpeg" alt="" /></a>
+									<a href="resources.html" class="image left"><img src="images/testing.jpeg" alt="" /></a>
 									<div class="inner">
-										<h3>More about Backflow Testing</h3>
+										<h3><a href="resources.html">More about Backflow Testing</a></h3>
 										<p style="text-align: justify;">
 											As a home or business owner, you may not be aware of backflow prevention procedures. 
 											Click here, to learn more about backflow, and how to prevent it.
@@ -228,9 +228,9 @@
 						<div class="row">
 							<section class="col-6 col-12-narrower">
 								<div class="box post">
-									<a href="#" class="image left"><img src="images/water_faucet.jpg" alt="" /></a>
+									<a href="services.html#commercial_service" class="image left"><img src="images/water_faucet.jpg" alt="" /></a>
 									<div class="inner">
-										<h3>Commercial Testing</h3>
+										<h3><a href="services.html#commercial_service">Commercial Testing</a></h3>
 										<p style="text-align: justify;">
 											Businesses that recently installed a backflow device or already contain a backflow device are <strong>responsible</strong>
 											to have their device tested by a certified NYS backflow tester like me. 
@@ -240,9 +240,9 @@
 							</section>
 							<section class="col-6 col-12-narrower">
 								<div class="box post">
-									<a href="#" class="image left"><img src="images/testing_gauge.jpg" alt="" /></a>
+									<a href="about.html#about_self_study" class="image left"><img src="images/testing_gauge.jpg" alt="" /></a>
 									<div class="inner">
-										<h3>Testing Done Right</h3>
+										<h3><a href="about.html#about_self_study">Testing Done Right</a></h3>
 										<p style="text-align: justify;">
 											Safeguarding the public water system is an essential part of my mission to protect public health.
 											By utilizing the most up-to-date techniques and equipment to perform backflow prevention tests.
@@ -273,10 +273,10 @@
 							<section class="col-3 col-6-narrower col-12-mobilep">
 								<!-- <h3>Links to Stuff</h3> -->
 								<ul class="links">
-									<li><a href="#">Home</a></li>
+									<li><a href="index.html">Home</a></li>
 									<li><a href="about.html">About Me</a></li>
-									<li><a href="#">Contact</a></li>
-									<li><a href="#">Schedule an Appointment</a></li>
+									<li><a href="contact.html">Contact</a></li>
+									<li><a href="appointment.html">Schedule an Appointment</a></li>
 									<li><a href="resources.html">FAQ</a></li>
 								</ul>
 							</section>
