--- a/appointment.html
+++ b/appointment.html
@@ -63,9 +63,32 @@
 										<section>
 											<h3>Service Locations</h3>
 											<ul>
-												<li style="list-style: none; font-weight: bold;">Nassau County</li>
+												<li style="list-style: none; font-weight: bold; margin-bottom: 10px;">Nassau County</li>
+												<li>Bethpage</li>
+												<li>Baldwin</li>
+												<li>Elmont</li>
+												<li>East Meadow</li>
+												<li>Floral Park</li>
+												<li>Franklin Square</li>
+												<li>Freeport Village</li>
+												<li>Garden City Park</li>
+												<li>Garden City South</li>
+												<li>Levittown</li>
+												<li>North Valley stream</li>
+												<li>New Hyde Park</li>
+												<li>New York American Water</li>
+												<li>Manhasset-Lakeville</li>
+												<li>Port Washington</li>
+												<li>Rockville Centre</li>
+												<li>Roslyn </li>
 												<li>Town of Hempstead</li>
+												<li>Uniondale</li>
+												<li>Village of Mineola</li>
 												<li>Village of Hempstead</li>
+												<li>Village of Old Westbury</li>
+												<li>Valley Stream</li>
+												<li>West Hempstead</li>
+												<li>Westbury</li>
 											</ul>
 										</section>
 									</div>
