--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 				<section class="wrapper discount">
 					<div class="container">
 						<header class="major">
-							<h2><a href="#">New Customers Save <strong>10%</strong> When Scheduling your Appointment</a></h2>
+							<h2><a href="incoming.html" target="_blank">New Customers Save <strong>10%</strong> When Scheduling your Appointment</a></h2>
 							<p>Have any questions? Visit my <a href="resources.html">FAQ</a> page</p>
 						</header>
 					</div>
