--- a/about.html
+++ b/about.html
@@ -118,13 +118,15 @@
 											<p style="text-align: justify;">
 												I was taught that when trying to provide a service one does not only need to learn the job but also study the field one is going in.
 												I've taken the time to research how the componets of a backflow device work, the proper testing equipment, and most importantly what are 
-												the risks that run when a backflow device is malfunctioning. <strong>WRITE MEDIUM ARTICLE about bakflow</strong> 
+												the risks that run when a backflow device is malfunctioning. 
+												<!-- <strong>WRITE MEDIUM ARTICLE about bakflow</strong>  -->
 											</p>
 
 											<p style="text-align: justify;">
 												Additionally, I offer a service no other competitors of my field offer, that is, <strong>testing to identify coliform bacteria such as E. coli.</strong> 
 												If you have children or planning to, it is very important that you perform such tests in a yearly basis or as often as you prefer to ensure the water
-												you are consuming is bacteria free. <strong>MEDIUM ARticle bacteria and water testing</strong>
+												you are consuming is bacteria free. 
+												<!-- <strong>MEDIUM ARticle bacteria and water testing</strong> -->
 											</p>
 
 											<p style="text-align: justify;">
@@ -202,7 +204,7 @@
 				<!-- Copyright -->
 					<div class="copyright">
 						<ul class="menu">
-							<li>&copy; Untitled. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy;All rights reserved</li><li>Design by: <a href="https://cbeltran.com/services.html" target="_blank">Carlos Beltran Services</a></li>
 						</ul>
 					</div>
 
