--- a/contact.html
+++ b/contact.html
@@ -143,7 +143,7 @@
 					<!-- Copyright -->
 						<div class="copyright">
 							<ul class="menu">
-								<li>&copy; Untitled. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy;All rights reserved</li><li>Design by: <a href="https://cbeltran.com/services.html" target="_blank">Carlos Beltran Services</a></li>
 							</ul>
 						</div>
 
