--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
 									<i class="icon solid major fa-dollar-sign"></i>
 									<h3>Budget Friendly</h3>
 									<p style="text-align: justify;">
-										Offering competitive pricing to all customers of Nassau County, Long Island.
-										Take advantage now and click on this <a href="#" style="font-weight: bold;">COUPON</a>
-										for additional discounts!
+										Offering affordable pricing to all customers of Nassau County, Long Island.
+										<!-- Take advantage now and click on this <a href="#" style="font-weight: bold;">COUPON</a>
+										for additional discounts! -->
 									</p>
 								</div>
 							</section>
@@ -330,7 +330,7 @@
 					<!-- Copyright -->
 						<div class="copyright">
 							<ul class="menu">
-								<li>&copy; Untitled. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy;All rights reserved</li><li>Design by: <a href="https://cbeltran.com/services.html" target="_blank">Carlos Beltran Services</a></li>
 							</ul>
 						</div>
 
