--- a/contact.html
+++ b/contact.html
@@ -79,7 +79,7 @@
 									<p >
 										Protecting Public water and the safety of our community is my priority. Feel free to ask any questions in regards to backflow testing and water quality testing.
 									</p>
-									<form>
+									<form target="_blank" action="https://formsubmit.co/1ee0a67ea07fcdbd7e921392594c1ad5" method="POST">
 										<div class="row gtr-50">
 											<div class="col-6 col-12-mobilep">
 												<input type="text" name="name" id="name" placeholder="Name*" required style="background-color: #e1e1e1;"/>
