--- a/services.html
+++ b/services.html
@@ -188,7 +188,7 @@
 							<p >
 								Devoted to service my community and ensure your water is safe to drink.
 								Offering reliable and affordable backflow testing prices!</p>
-							<form>
+							<form target="_blank" action="https://formsubmit.co/1ee0a67ea07fcdbd7e921392594c1ad5" method="POST">
 								<div class="row gtr-50">
 									<div class="col-6 col-12-mobilep">
 										<input type="text" name="name" id="name" placeholder="Name*" required/>
