--- a/contact.html
+++ b/contact.html
@@ -67,7 +67,7 @@
 										<p>All content, all the time.</p>
 									</header> -->
 
-									<span class="image featured"><img src="images/get-in-touch.png" alt="Contact Carlos Beltran Backflow" style="width: auto; margin-left: auto; margin-right: auto;"/></span>
+									<span class="image featured contact" ><img src="images/get-in-touch.png" alt="Contact Carlos Beltran Backflow" style="margin-left: auto; margin-right: auto;"/></span>
 
 									<ul>
 										<li><strong>Call/Text: <a href="tel:516)324-4687"> (516) 324 - 4687</a></strong></li>
