--- a/about.html
+++ b/about.html
@@ -130,7 +130,7 @@
 											</p>
 
 											<p style="text-align: justify;">
-												Lastly, did you know that NYS offers <strong>FREE</strong> lead testing to residential property owners? If you didnt I higly advise you to <a href="#">contact me</a> that way I can help you
+												Lastly, did you know that NYS offers <strong>FREE</strong> lead testing to residential property owners? If you didn't I higly advise you to <a href="contact.html">contact me</a> that way I can help you
 												obtain your <strong>FREE</strong> lead testing kit.
 											</p>
 										</article>
