--- a/about.html
+++ b/about.html
@@ -104,7 +104,7 @@
 												<!-- <p>Sidebar on the left, content on the right.</p> -->
 											</header>
 
-											<span class="image featured"><img src="images/banner.jpg" alt="" /></span>
+											<!-- <span class="image featured"><img src="images/banner.jpg" alt="" /></span> -->
 
 											<p style="text-align: justify;">
 												I am a resident of Nassau County, Long Island. I love my community and I look forward to making it a better place.
@@ -133,6 +133,14 @@
 												Lastly, did you know that NYS offers <strong>FREE</strong> lead testing to residential property owners? If you didn't I higly advise you to <a href="contact.html">contact me</a> that way I can help you
 												obtain your <strong>FREE</strong> lead testing kit.
 											</p>
+
+											<div class="box post">
+												<a href="resources.html" class="image left"><img src="images/aaa.webp" alt="" /></a>
+												<div class="inner">
+													<h3><a href="https://www.aaabackflownys.com/">Backflow Certification</a></h3>
+													<p>I Attended <a href="https://www.aaabackflownys.com/" target="_blank">AAA Backflow Certification of NY</a> to obtain my backflow certification on April 26, 2021.</p>
+												</div>
+											</div>
 										</article>
 								</div>
 							</div>
