--- a/about.html
+++ b/about.html
@@ -124,8 +124,7 @@
 
 											<p style="text-align: justify;">
 												Additionally, I offer a service no other competitors of my field offer, that is, <strong>testing to identify coliform bacteria such as E. coli.</strong> 
-												If you have children or planning to, it is very important that you perform such tests in a yearly basis or as often as you prefer to ensure the water
-												you are consuming is bacteria free. 
+												It is recommended that you perform such tests in a yearly basis or as often as you prefer to ensure that you and your loved ones are consuming bacteria free water. 
 												<!-- <strong>MEDIUM ARticle bacteria and water testing</strong> -->
 											</p>
 
