--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 							<!-- <span style="margin-left: 10px;"><em>OR</em></span> -->
 						</h2>
 						<a href="appointment.html" class="button">Schedule Appointment</a>
-						<h2 style="color: #E3482E; margin-left: 15px;"><a href="tel:516)324-4687">Se Habla Espanol!</a></h2>
+						<h2 style="color: #E3482E; margin-left: 15px;"><a href="tel:516)324-4687">Se Habla Español!</a></h2>
 					</header>
 				</section>
 
@@ -189,7 +189,7 @@
 				<section class="wrapper discount">
 					<div class="container">
 						<header class="major">
-							<h2><a href="incoming.html" target="_blank">New Customers Save <strong>10%</strong> When Scheduling your Appointment</a></h2>
+							<h2><a href="incoming.html" target="_blank">New Customers Save <strong>10%</strong> When Scheduling an Appointment</a></h2>
 							<p>Have any questions? Visit my <a href="resources.html">FAQ</a> page</p>
 						</header>
 					</div>
