--- a/incoming.html
+++ b/incoming.html
@@ -3,9 +3,10 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="backflow testing coupon, coupon code, backflow testing, nassau county." />
+        <meta name="description" content="Save 10% when scheduling your appointment today! Backflow testing for all residents of Nassau County. Affordable, reliable, and efficient."/>
+        <meta name="keywords" content="backflow testing coupon, coupon code, backflow testing, nassau county, long island, backflow">
         <meta name="author" content="carlos beltran" />
-        <title>Backflow testing coupon - Carlos Beltran</title>
+        <title>Backflow testing coupon - 10% off</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/incoming-assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
