--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
 -->
 <html>
 	<head>
-		<title>Backflow Testing by Carlos Beltran</title>
+		<title>Backflow testing by Carlos Beltran | Nassau County</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="robots" content="index, follow">
+		<meta name="description"content="Providing backflow testing services to all Nassau County residents. Affordable, reliable, efficient, and trustworthy.">
+		<meta name="keywords" content="backflow testing, sprinklers, backflow service, backflow, backflow preventer, backflow valve, dcv, rpz, nassau county backflow">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="preconnect" href="https://fonts.gstatic.com">
 		<script src="https://kit.fontawesome.com/815e9e56d3.js" crossorigin="anonymous"></script>
@@ -44,25 +47,6 @@
 						<nav id="nav">
 							<ul>
 								<li class="current"><a href="index.html">Home</a></li>
-								<!-- <li>
-									<a href="#">Dropdown</a>
-									<ul>
-										<li><a href="#">Lorem dolor</a></li>
-										<li><a href="#">Magna phasellus</a></li>
-										<li><a href="#">Etiam sed tempus</a></li>
-										<li>
-											<a href="#">Submenu</a>
-											<ul>
-												<li><a href="#">Lorem dolor</a></li>
-												<li><a href="#">Phasellus magna</a></li>
-												<li><a href="#">Magna phasellus</a></li>
-												<li><a href="#">Etiam nisl</a></li>
-												<li><a href="#">Veroeros feugiat</a></li>
-											</ul>
-										</li>
-										<li><a href="#">Veroeros feugiat</a></li>
-									</ul>
-								</li> -->
 								<li><a href="about.html">About</a></li>
 								<li><a href="services.html">Services</a></li>
 								<li><a href="resources.html">Resources</a></li>
@@ -170,32 +154,6 @@
 								</div>
 							</section>
 						</div>
-						<!-- <div class="row">
-							<section class="col-6 col-12-narrower">
-								<div class="box post">
-									<a href="#" class="image left"><img src="images/water_faucet.jpg" alt="" /></a>
-									<div class="inner">
-										<h3>Commercial Testing</h3>
-										<p style="text-align: justify;">
-											Businesses that recently installed a backflow device or already contain a backflow device are <strong>responsible</strong>
-											to have their device tested by a certified NYS backflow tester like me. 
-										</p>
-									</div>
-								</div>
-							</section>
-							<section class="col-6 col-12-narrower">
-								<div class="box post">
-									<a href="#" class="image left"><img src="images/testing_gauge.jpg" alt="" /></a>
-									<div class="inner">
-										<h3>Testing Done Right</h3>
-										<p style="text-align: justify;">
-											Safeguarding the public water system is an essential part of my mission to protect public health.
-											By utilizing the most up-to-date techniques and equipment to perform backflow prevention tests.
-										</p>
-									</div>
-								</div>
-							</section>
-						</div> -->
 					</div>
 				</section>
 
