--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 -->
 <html>
 	<head>
-		<title>Backflow testing by Carlos Beltran | Nassau County</title>
+		<title>Backflow Prevention Testing | Nassau County | NYS Certified</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="robots" content="index, follow">
-		<meta name="description"content="Providing backflow testing services to all Nassau County residents. Affordable, reliable, efficient, and trustworthy.">
+		<meta name="description"content="Backflow device testing services to all Nassau County residents. Servicing residential and commercial customers. Offering affordable, reliable, efficient, and trustworthy service.">
 		<meta name="keywords" content="backflow testing, sprinklers, backflow service, backflow, backflow preventer, backflow valve, dcv, rpz, nassau county backflow">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="preconnect" href="https://fonts.gstatic.com">
