--- a/services.html
+++ b/services.html
@@ -9,6 +9,9 @@
 		<title>Backflow Testing by Carlos Beltran</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="robots" content="index, follow">
+		<meta name="description"content="Backflow device testing services to all Nassau County residents. Servicing residential and commercial customers. Offering affordable, reliable, efficient, and trustworthy service.">
+		<meta name="keywords" content="backflow testing, sprinklers, backflow service, backflow, backflow preventer, backflow valve, dcv, rpz, nassau county backflow">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<script src="https://kit.fontawesome.com/815e9e56d3.js" crossorigin="anonymous"></script>
 	
