--- a/about.html
+++ b/about.html
@@ -74,6 +74,7 @@
 										<article>
 											<header>
 												<h2>About Me</h2>
+												<p><a href="https://cbeltran.com/services.html" target="_blank">Visit my portfolio for more!</a></p>
 											</header>
 
 											<!-- <span class="image featured"><img src="images/banner.jpg" alt="" /></span> -->
