--- a/appointment.html
+++ b/appointment.html
@@ -145,6 +145,11 @@
 				</div>
 
 				<!-- Icons -->
+				<ul class="icons">
+					<li>Follow on Social Media!</li>
+					<li><a href="https://www.facebook.com/backflowfriends" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+					<li><a href="https://goo.gl/maps/aR3dDEwJpUp9HMtd8" class="icon brands fa-google-plus-g"><span class="label">Google+</span></a></li>
+				</ul>
 
 				<!-- Copyright -->
 					<div class="copyright">
