--- a/index.html
+++ b/index.html
@@ -298,14 +298,16 @@
 					</div>
 
 					<!-- Icons -->
-						<!-- <ul class="icons">
+					<ul class="icons">
+						<li>Follow on Social Media!</li>
+						<li><a href="https://www.facebook.com/backflowfriends" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+						<li><a href="https://goo.gl/maps/aR3dDEwJpUp9HMtd8" class="icon brands fa-google-plus-g"><span class="label">Google+</span></a></li>
+					</ul>
+						<!-- 
 							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 							<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 							<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-							<li><a href="#" class="icon brands fa-google-plus-g"><span class="label">Google+</span></a></li>
-						</ul> -->
-
+						-->
 					<!-- Copyright -->
 						<div class="copyright">
 							<ul class="menu">
