--- a/about.html
+++ b/about.html
@@ -77,7 +77,7 @@
 												<p><a href="https://cbeltran.com/services.html" target="_blank">Visit my portfolio for more!</a></p>
 											</header>
 
-											<!-- <span class="image featured"><img src="images/banner.jpg" alt="" /></span> -->
+											<span class="image featured"><img src="images/main-bk.jpg" alt="" /></span>
 
 											<p style="text-align: justify;">
 												I am a resident of Nassau County, Long Island. I love my community and I look forward to making it a better place.
