--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 							</section>
 							<section class="col-6 col-12-narrower">
 								<div class="box post">
-									<a href="resources.html" class="image left"><img src="images/testing.jpeg" alt="" /></a>
+									<a href="resources.html" class="image left"><img src="images/cb-testing.JPG" alt="" /></a>
 									<div class="inner">
 										<h3><a href="resources.html">More about Backflow Testing</a></h3>
 										<p style="text-align: justify;">
