--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 		<script src="https://kit.fontawesome.com/815e9e56d3.js" crossorigin="anonymous"></script>
 		<link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css2?family=Courgette&display=swap" rel="stylesheet">
+		<link rel="icon" href="images/favicon.ico">
 	
 	<!--Start of Tawk.to Script-->
 		<script type="text/javascript">
