--- a/contact.html
+++ b/contact.html
@@ -14,6 +14,7 @@
 		<meta name="keywords" content="backflow testing, sprinklers, backflow service, backflow, backflow preventer, backflow valve, dcv, rpz, nassau county backflow">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<script src="https://kit.fontawesome.com/815e9e56d3.js" crossorigin="anonymous"></script>
+		<link rel="icon" href="images/favicon.ico">
 	
 	<!--Start of Tawk.to Script-->
 		<script type="text/javascript">
