--- a/incoming.html
+++ b/incoming.html
@@ -18,6 +18,7 @@
         <link href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="assets/incoming-css/styles.css" rel="stylesheet" />
+        <link rel="icon" href="images/favicon.ico">
     </head>
     <body style="background: linear-gradient(0deg,rgba(169, 229, 247, 0.3),rgba(178, 205, 241, 0.3)), url(images/incoming_drinking_water.jpg) no-repeat center center fixed; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover;  background-size: cover;">
         <header class="masthead">
