--- a/about.html
+++ b/about.html
@@ -77,8 +77,8 @@
 												<h2>About Me</h2>
 												<p><a href="https://cbeltran.com/services.html" target="_blank">Visit my portfolio for more!</a></p>
 											</header>
-
-											<span class="image featured"><img src="images/main-bk.jpg" alt="" /></span>
+											
+											<span class="image featured"><img src="images/about-testing-cb-2.JPG" alt="" style="width: 250px; height: 250px; border-radius: 50%; margin: auto;"/></span>
 
 											<p style="text-align: justify;">
 												I am a resident of Nassau County, Long Island. I love my community and I look forward to making it a better place.
