--- a/index.html
+++ b/index.html
@@ -146,9 +146,9 @@
 									<div class="inner">
 										<h3><a href="services.html#bacteria_service">Water Bacteria Test</a></h3>
 										<p style="text-align: justify;">
-											How clean and safe is your drinking water?
-											Although, public water is tested to ensure there is no coliform present, this does not guarantee that throught 
-											the process of serving your water there are contaminats that flow into your drinking water. <strong>I can help you find out 
+											Is your drinking water safe?
+											Although, public water is tested to ensure there is no coliform present, this does not guarantee that throughout 
+											the process of serving your water there are contaminats that may flow into your drinking water. <strong>I can help you find out 
 											if your drinking water contains coliform bacteria such as E. coli.</strong>
 										</p>
 									</div>
