--- a/appointment.html
+++ b/appointment.html
@@ -64,6 +64,7 @@
 												<li>New York American Water</li>
 												<li>Manhasset-Lakeville</li>
 												<li>Port Washington</li>
+												<li>Point Lookout</li>
 												<li>Rockville Centre</li>
 												<li>Roslyn </li>
 												<li>Town of Hempstead</li>
