--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 									<div class="inner">
 										<h3><a href="resources.html">Backflow Device Testing</a></h3>
 										<p style="text-align: justify;">
-											Our area, Nassau County in Long Island, NY, demands testing on a yearly basis to ensure water is safe to consume.
+											Nassau County in Long Island, NY, demands testing on a yearly basis to ensure water is safe to consume.
 											As a certified NYS backflow tester, I will ensure that your device is tested properly and submit all paperwork 
 											required by the county. Additionally, records of your test are safely kept in case you need a copy in the future.
 										</p>
