--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="robots" content="index, follow">
-		<meta name="description"content="Backflow device testing services to all Nassau County residents. Servicing residential and commercial customers. Offering affordable, reliable, efficient, and trustworthy service.">
+		<meta name="description"content="Backflow preventer testing services to all Nassau County residents. Servicing residential and commercial customers. Offering affordable, reliable, efficient, and trustworthy service.">
 		<meta name="keywords" content="backflow testing, sprinklers, backflow service, backflow, backflow preventer, backflow valve, dcv, rpz, nassau county backflow">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="preconnect" href="https://fonts.gstatic.com">
@@ -131,7 +131,7 @@
 								<div class="box post">
 									<a href="resources.html" class="image left"><img src="images/backflow_testing.JPG" alt="Watts tk-9a backflow preventer test kit" /></a>
 									<div class="inner">
-										<h3><a href="resources.html">Backflow Device Testing</a></h3>
+										<h3><a href="resources.html">Backflow Preventer Testing</a></h3>
 										<p style="text-align: justify;">
 											Nassau County in Long Island, NY, demands backflow testing on a yearly basis to ensure water is safe to consume.
 											As a certified NYS backflow tester, I will ensure that your device is tested properly and submit all paperwork 
