--- a/services.html
+++ b/services.html
@@ -10,7 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="robots" content="index, follow">
-		<meta name="description"content="Backflow device testing services to all Nassau County residents. Servicing residential and commercial customers. Offering affordable, reliable, efficient, and trustworthy service.">
+		<meta name="description"content="Backflow preventer testing services to all Nassau County residents. Servicing residential and commercial customers. Offering affordable, reliable, efficient, and trustworthy service.">
 		<meta name="keywords" content="backflow testing, sprinklers, backflow service, backflow, backflow preventer, backflow valve, dcv, rpz, nassau county backflow">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="icon" href="images/favicon.ico">
@@ -65,7 +65,7 @@
 										<article>
 											<header>
 												<h2>Services</h2>
-												<p>Servicing Nassau County, Long Island, NY Backflow Device Testing and Water Safety</p>
+												<p>Servicing Nassau County, Long Island, NY Backflow Preventer Testing and Water Safety</p>
 											</header>
 
 											<span class="image featured"><img src="images/services-bk.jpg" alt="carlos beltran backflow services" /></span>
