--- a/appointment.html
+++ b/appointment.html
@@ -10,8 +10,8 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="robots" content="index, follow">
-		<meta name="description"content="Backflow device testing services to all Nassau County residents. Servicing residential and commercial customers. Offering affordable, reliable, efficient, and trustworthy service.">
-		<meta name="keywords" content="backflow testing, sprinklers, backflow service, backflow, backflow preventer, backflow valve, dcv, rpz, nassau county backflow">
+		<meta name="description"content="Backflow preventer testing. Servicing residential and commercial customers in Nassau County. Offering affordable, reliable, efficient, and trustworthy service.">
+		<meta name="keywords" content="backflow preventer, backflow testing hempstead, backflow service, backflow, backflow preventer, backflow valve, dcv, rpz, nassau county backflow">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<script src="https://kit.fontawesome.com/815e9e56d3.js" crossorigin="anonymous"></script>
 		<link rel="icon" href="images/favicon.ico">
@@ -156,7 +156,7 @@
 				<!-- Copyright -->
 					<div class="copyright">
 						<ul class="menu">
-							<li>&copy;All rights reserved</li><li>Design by: <a href="https://cbeltran.com/services.html" target="_blank">Carlos Beltran Services</a></li>
+							<li>&copy;All rights reserved</li><li>Design by: <a href="https://cbeltran.com/services.html" target="_blank">CB Services</a></li>
 						</ul>
 					</div>
 
