--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 				<section class="wrapper discount">
 					<div class="container">
 						<header class="major">
-							<h2><a href="incoming.html" target="_blank">New Customers Save <strong>10%</strong> When Scheduling an Appointment</a></h2>
+							<h2><a href="incoming.html" target="_blank">New Customers Save <strong style="color:crimson">$10</strong> When Scheduling an Appointment</a></h2>
 							<p>Have any questions? Visit my <a href="resources.html">FAQ</a> page</p>
 						</header>
 					</div>
@@ -213,7 +213,7 @@
 							</section>
 							<section class="col-6 col-12-narrower">
 								<div class="box post">
-									<a href="about.html#about_self_study" class="image left"><img src="images/testing_gauge.jpg" alt="Watts tk-9a backflow testing kit" /></a>
+									<a href="about.html#about_self_study" class="image left"><img src="images/testing_gauge_cb.JPG" alt="Watts tk-9a backflow testing kit" /></a>
 									<div class="inner">
 										<h3><a href="about.html#about_self_study">Testing Done Right</a></h3>
 										<p style="text-align: justify;">
@@ -312,7 +312,7 @@
 					<!-- Copyright -->
 						<div class="copyright">
 							<ul class="menu">
-								<li>&copy;All rights reserved</li><li>Design by: <a href="https://cbeltran.com/services.html" target="_blank">Carlos Beltran Services</a></li>
+								<li>&copy;All rights reserved</li><li>Design by: <a href="https://cbeltran.com/services.html" target="_blank">CB Services</a></li>
 							</ul>
 						</div>
 
