--- a/resources.html
+++ b/resources.html
@@ -335,7 +335,7 @@
 					<!-- Copyright -->
 						<div class="copyright">
 							<ul class="menu">
-								<li>&copy;All rights reserved</li><li>Design by: <a href="https://cbeltran.com/services.html" target="_blank">Carlos Beltran Services</a></li>
+								<li>&copy;All rights reserved</li><li>Design by: <a href="https://cbeltran.com/services.html" target="_blank">CB Services</a></li>
 							</ul>
 						</div>
 
