--- a/incoming.html
+++ b/incoming.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="Save 10% when scheduling your appointment today! Backflow testing for all residents of Nassau County. Affordable, reliable, and efficient."/>
+        <meta name="description" content="Save $10 when scheduling your appointment today! Backflow testing for all residents of Nassau County. Affordable, reliable, and efficient."/>
         <meta name="keywords" content="backflow testing coupon, coupon code, backflow testing, nassau county, long island, backflow">
         <meta name="author" content="carlos beltran" />
-        <title>Nassau County | Backflow Preventer | Backflow testing coupon - 10% off</title>
+        <title>Nassau County | Backflow Preventer | Backflow testing coupon - $10 off</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/incoming-assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
@@ -27,7 +27,7 @@
                 <div class="row align-items-center justify-content-center text-center">
                     <div class="text-white font-weight-bold h1">All New Customers Receive</div>
                     <div class="col-lg-10 align-self-end">
-                        <div class="text-white font-weight-bold display-2 text-uppercase text-primary" style="font-family: Merriweather Sans;">10% Off</div>
+                        <div class="text-white font-weight-bold display-2 text-uppercase text-primary" style="font-family: Merriweather Sans;">$10 Off</div>
                         <hr class="divider my-4" />
                     </div>
                     <div class="col-lg-8 align-self-baseline">
