--- a/appointment.html
+++ b/appointment.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Backflow Testing by Carlos Beltran</title>
+		<title>Backflow Preventer Testing by Carlos Beltran</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="robots" content="index, follow">
@@ -149,8 +149,8 @@
 				<!-- Icons -->
 				<ul class="icons">
 					<li>Follow on Social Media!</li>
-					<li><a href="https://www.facebook.com/backflowfriends" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-					<li><a href="https://goo.gl/maps/aR3dDEwJpUp9HMtd8" class="icon brands fa-google-plus-g"><span class="label">Google+</span></a></li>
+					<li><a href="https://www.facebook.com/backflowfriends" class="icon brands fa-facebook-f" style="color: #3b5998;"><span class="label">Facebook</span></a></li>
+					<li><a href="https://goo.gl/maps/aR3dDEwJpUp9HMtd8" class="icon brands fa-google-plus-g" style="color: #FF3E30;"><span class="label">Google+</span></a></li>
 				</ul>
 
 				<!-- Copyright -->
