--- a/contact.html
+++ b/contact.html
@@ -133,8 +133,8 @@
 					<!-- Icons -->
 					<ul class="icons">
 						<li>Follow on Social Media!</li>
-						<li><a href="https://www.facebook.com/backflowfriends" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="https://goo.gl/maps/aR3dDEwJpUp9HMtd8" class="icon brands fa-google-plus-g"><span class="label">Google+</span></a></li>
+						<li><a href="https://www.facebook.com/backflowfriends" class="icon brands fa-facebook-f" style="color: #3b5998;"><span class="label">Facebook</span></a></li>
+						<li><a href="https://goo.gl/maps/aR3dDEwJpUp9HMtd8" class="icon brands fa-google-plus-g" style="color: #FF3E30;"><span class="label">Google+</span></a></li>
 					</ul>
 
 					<!-- Copyright -->
