--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 									<i class="icon solid major fa-dollar-sign"></i>
 									<h3>Budget Friendly</h3>
 									<p style="text-align: justify;">
-										Offering affordable pricing to all customers of Nassau County, Long Island.
+										Offering affordable pricing to all customers of Nassau County, Long Island. Receive <a href="incoming.html" target="_blank"><strong style="color:crimson">$10</strong></a> off your first backflow preventer test!
 										<!-- Take advantage now and click on this <a href="#" style="font-weight: bold;">COUPON</a>
 										for additional discounts! -->
 									</p>
@@ -301,8 +301,8 @@
 					<!-- Icons -->
 					<ul class="icons">
 						<li>Follow on Social Media!</li>
-						<li><a href="https://www.facebook.com/backflowfriends" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="https://goo.gl/maps/aR3dDEwJpUp9HMtd8" class="icon brands fa-google-plus-g"><span class="label">Google+</span></a></li>
+						<li><a href="https://www.facebook.com/backflowfriends" class="icon brands fa-facebook-f" style="color: #3b5998;"><span class="label">Facebook</span></a></li>
+						<li><a href="https://goo.gl/maps/aR3dDEwJpUp9HMtd8" class="icon brands fa-google-plus-g" style="color: #FF3E30;"><span class="label">Google+</span></a></li>
 					</ul>
 						<!-- 
 							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
